# spooky-vm

./: .bazelrc  .gitignore  LICENSE  README.md  WORKSPACE  austrin.spook  invalid.spook  j2cl_proto.bzl  pom.xml  rules.bzl
.circleci/: config.yml
.github/workflows/: workflow.yml
java/se/jsannemo/spooky/: BUILD.bazel  CLI.java  Main.java
java/se/jsannemo/spooky/compiler/: ABI.java  BUILD.bazel  Compiler.java  Errors.java  Position.java  ValidationException.java
java/se/jsannemo/spooky/compiler/ast/: ArrayLit.java  Assignment.java  BUILD.bazel  BinaryExpr.java  BinaryOp.java  Block.java  Conditional.java  Expression.java  Func.java  FuncCall.java  FuncDecl.java  Identifier.java  Loop.java  Program.java  ReturnValue.java  Select.java  SourcePos.java  SourceRange.java  Statement.java  Ternary.java  Token.java  TokenKind.java  Type.java  UnaryExpr.java  UnaryOp.java  Value.java  VarDecl.java
java/se/jsannemo/spooky/compiler/codegen/: Assembler.java  BUILD.bazel  CodeGen.java
java/se/jsannemo/spooky/compiler/ir/: BUILD.bazel  Conventions.java  IrAddr.java  IrAddrs.java  IrFunction.java  IrGen.java  IrIpAddr.java  IrProgram.java  IrStatement.java  IrType.java  IrTypes.java  IrValue.java  ToIr.java  ir.proto
java/se/jsannemo/spooky/compiler/parser/: BUILD.bazel  Parser.java  Spooky.g4  Tokenizer.java  ast.proto
java/se/jsannemo/spooky/compiler/testing/: BUILD.bazel  RegenParseTrees.java  RegenTokenizations.java  TokenUtils.java  testcases.proto
java/se/jsannemo/spooky/compiler/typecheck/: BUILD.bazel  Structs.java  TypeChecker.java  Types.java  checked.proto
java/se/jsannemo/spooky/editor/: BUILD.bazel  editor.js
java/se/jsannemo/spooky/js/: BUILD.bazel  api.js
java/se/jsannemo/spooky/lsp/: LspImplementation.java
java/se/jsannemo/spooky/util/: BUILD.bazel  CircularQueue.java
java/se/jsannemo/spooky/vm/: BUILD.bazel  CallingConvention.java  Calls.java  ExternCall.java  SpookyVm.java  StdLib.java  VmException.java  code.proto
java/se/jsannemo/spooky/vm/code/: BUILD.bazel  ByteStreamIterator.java  Executable.java  ExecutableParser.java  InstructionException.java  InstructionTokenizer.java  Instructions.java  OpCode.java  Serialization.java
javatests/se/jsannemo/spooky/compiler/: BUILD.bazel  CompilerTest.java  FullProgramTest.java
javatests/se/jsannemo/spooky/compiler/ir/: BUILD.bazel  IrGenTest.java  IrTest.java
javatests/se/jsannemo/spooky/compiler/parser/: BUILD.bazel  ParserTest.java  TokenizerTest.java  TypeCheckerTest.java
javatests/se/jsannemo/spooky/compiler/programs/: carl.spooky  globals.spooky  globals_calling_functions.spooky  globals_stack.spooky  isprime.spooky  shortcircuit.spooky
javatests/se/jsannemo/spooky/compiler/typecheck/: BUILD.bazel  TypeCheckerTest.java
javatests/se/jsannemo/spooky/util/: BUILD.bazel  CircularQueueTest.java
javatests/se/jsannemo/spooky/vm/: BUILD.bazel  FullProgramTest.java
javatests/se/jsannemo/spooky/vm/code/: InstructionTokenizerTest.java  InstructionsTest.java
scripts/: git-pre-commit  install_precommit.sh  regen_tokens.sh  regen_trees.sh
src/main/java/se/jsannemo/spooky/: Main.java
src/main/java/se/jsannemo/spooky/compiler/: Assembler.java  Compiler.java
src/main/java/se/jsannemo/spooky/compiler/ast/: BinaryExpression.java  BinaryOperator.java  Conditional.java  Expression.java  Function.java  FunctionCall.java  FunctionDecl.java  FunctionParam.java  Identifier.java  Loop.java  Program.java  Statement.java  StatementList.java  TypeName.java  VarDecl.java
src/main/java/se/jsannemo/spooky/compiler/codegen/: CodeGen.java  CodeOptimizer.java  Conventions.java
src/main/java/se/jsannemo/spooky/compiler/ir/: IrAddr.java  IrFunction.java  IrProgram.java  IrStatement.java  IrType.java  ToIr.java
src/main/java/se/jsannemo/spooky/lsp/: LanguageServerInit.java  LspImplementation.java
src/main/java/se/jsannemo/spooky/vm/: SpookyVm.java  StdLib.java  VmException.java
src/main/java/se/jsannemo/spooky/vm/code/: Executable.java  ExecutableParser.java  InstructionTokenizer.java  Instructions.java  OpCode.java  OpCodes.java  Serialization.java
src/main/javacc/se/jsannemo/spooky/compiler/: Parser.jj
src/test/java/se/jsannemo/spooky/compiler/: CompilerTest.java
src/test/java/se/jsannemo/spooky/vm/: SpookyVmTest.java
src/test/java/se/jsannemo/spooky/vm/code/: ExecutableParserTest.java  InstructionTokenizerTest.java  InstructionsTest.java  SerializationTest.java
src/test/resources/example_programs/: austrin.spooky  binary.spooky  carl2.spooky  fizzbuzz.spooky  helloworld.spooky  isprime.spooky  modifying_operators.spooky
test_programs/: BUILD.bazel  tests.textproto
test_programs/parse_trees/: absolutelynothing.spooky.parsetree  austrin.spooky.parsetree  binary.spooky.parsetree  carl.spooky.parsetree  carl2.spooky.parsetree  fizzbuzz.spooky.parsetree  globals.spooky.parsetree  globals_calling_functions.spooky.parsetree  globals_stack.spooky.parsetree  helloworld.spooky.parsetree  isprime.spooky.parsetree  shortcircuit.spooky.parsetree
test_programs/sources/: BUILD.bazel  absolutelynothing.spooky  binary.spooky  callafterprint.spooky  carl.spooky  fizzbuzz.spooky  globalassign.spooky  globals.spooky  globals_calling_functions.spooky  globals_stack.spooky  helloworld.spooky  invalid_strings.spooky  isprime.spooky  printfun.spooky  printglobal.spooky  printliteral.spooky  shortcircuit.spooky  ternary.spooky
test_programs/tokenizations/: absolutelynothing.spooky.tokens  austrin.spooky.tokens  binary.spooky.tokens  carl.spooky.tokens  carl2.spooky.tokens  fizzbuzz.spooky.tokens  globals.spooky.tokens  globals_calling_functions.spooky.tokens  globals_stack.spooky.tokens  helloworld.spooky.tokens  invalid_strings.spooky.tokens  invalid_token.spooky.tokens  isprime.spooky.tokens  shortcircuit.spooky.tokens
