load("@//:rules.bzl", "java_j2cl_library")

java_j2cl_library(
    name = "common",
    srcs = [
        "ABI.java",
        "Errors.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//java/se/jsannemo/spooky/compiler/parser:ast_java_proto",
        "//third_party/guava",
    ],
)

java_j2cl_library(
    name = "compiler",
    srcs = ["Compiler.java"],
    visibility = ["//visibility:public"],
    deps = [
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/compiler/ir",
        "//java/se/jsannemo/spooky/compiler/ir:ir_java_proto",
        "//java/se/jsannemo/spooky/compiler/parser",
        "//java/se/jsannemo/spooky/compiler/parser:ast_java_proto",
        "//java/se/jsannemo/spooky/compiler/typecheck",
        "//java/se/jsannemo/spooky/compiler/typecheck:checked_java_proto",
        "//third_party/guava",
        "@com_google_j2cl//:jsinterop-annotations",
    ],
)
