load("@//:rules.bzl", "java_j2cl_library")

java_j2cl_library(
    name = "common",
    srcs = [
        "Errors.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//java/se/jsannemo/spooky/compiler/ast",
        "//third_party:autovalue",
        "//third_party:guava",
        "//third_party:jsinterop",
    ],
)
