load("@com_google_j2cl//build_defs:rules.bzl", "j2cl_application")
load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library")

closure_js_library(
    name = "editor-js",
    srcs = ["editor.js"],
    deps = ["//java/se/jsannemo/spooky/compiler:compiler-j2cl"],
)

j2cl_application(
    name = "editor-app",
    entry_points = ["spooky.editor"],
    deps = [":editor-js"],
)
