load("@com_google_j2cl//build_defs:rules.bzl", "j2cl_application")
load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library")

closure_js_library(
    name = "js-lib",
    srcs = ["api.js"],
    deps = [
        "//java/se/jsannemo/spooky/compiler:compiler-j2cl",
    ],
)

j2cl_application(
    name = "js-api",
    entry_points = ["spooky.api"],
    deps = [":js-lib"],
)
