java_library(
    name = "vm",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        ":code_java_proto",
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/compiler/codegen",
        "//java/se/jsannemo/spooky/compiler/ir",
        "//third_party/guava",
    ],
)

proto_library(
    name = "code_proto",
    srcs = ["code.proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "code_java_proto",
    visibility = ["//visibility:public"],
    deps = [":code_proto"],
)
