load("//:rules.bzl", "java_j2cl_library")

java_j2cl_library(
    name = "vm",
    srcs = [
        "CallingConvention.java",
        "ExternCall.java",
        "SpookyVm.java",
        "StdLib.java",
        "VmException.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//java/se/jsannemo/spooky/vm/code",
        "//third_party:autovalue",
        "//third_party:guava",
        "//third_party:jsinterop",
    ],
)
