java_library(
    name = "codegen",
    srcs = [
        "CodeGen.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//java/se/jsannemo/spooky/compiler/ir",
        "//java/se/jsannemo/spooky/compiler/ir:ir_java_proto",
        "//java/se/jsannemo/spooky/vm:code_java_proto",
        "//third_party/guava",
    ],
)
