load("@//:rules.bzl", "java_j2cl_library")

java_j2cl_library(
    name = "codegen",
    srcs = [
        "Assembler.java",
        "CodeGen.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//java/se/jsannemo/spooky/compiler/ir",
        "//java/se/jsannemo/spooky/vm",
        "//java/se/jsannemo/spooky/vm/code",
        "//third_party:guava",
    ],
)
