load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library")
load("@//:rules.bzl", "java_j2cl_library", "java_j2cl_proto_library")

proto_library(
    name = "ir_proto",
    srcs = ["ir.proto"],
    visibility = ["//visibility:public"],
)

java_j2cl_proto_library(
    name = "ir_java_proto",
    visibility = ["//visibility:public"],
    deps = [":ir_proto"],
)

java_j2cl_library(
    name = "ir",
    srcs = [
        "IrGen.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":ir_java_proto",
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/compiler/typecheck:checked_java_proto",
        "//third_party/guava",
    ],
)
