load("//:rules.bzl", "java_j2cl_library")

java_j2cl_library(
    name = "ir",
    srcs = [
        "IrAddr.java",
        "IrFunction.java",
        "IrIpAddr.java",
        "IrProgram.java",
        "IrStatement.java",
        "IrType.java",
        "IrValue.java",
        "ToIr.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/compiler/ast",
        "//java/se/jsannemo/spooky/vm",
        "//third_party:autovalue",
        "//third_party:guava",
        "//third_party:jsinterop",
    ],
)
