load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library")
load("@com_google_j2cl//build_defs:rules.bzl", "j2cl_library")

proto_library(
    name = "ast_proto",
    srcs = ["ast.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
    ],
)

java_proto_library(
    name = "ast_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":ast_proto",
    ],
)

java_library(
    name = "parser",
    srcs = [
        "Parser.java",
        "Tokenizer.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":ast_java_proto",
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/util",
        "//third_party/guava",
        "//third_party/protobuf:java",
    ],
)
