load("@//:rules.bzl", "java_j2cl_library", "java_j2cl_proto_library")

proto_library(
    name = "ast_proto",
    srcs = ["ast.proto"],
    visibility = ["//visibility:public"],
)

java_j2cl_proto_library(
    name = "ast_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":ast_proto",
    ],
)

java_j2cl_library(
    name = "parser",
    srcs = [
        "Parser.java",
        "Tokenizer.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":ast_java_proto",
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/util",
        "//third_party/guava",
    ],
)
