load("@//:rules.bzl", "java_j2cl_library")

java_j2cl_library(
    name = "parser",
    srcs = [
        "Parser.java",
        "Tokenizer.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/compiler/ast",
        "//java/se/jsannemo/spooky/util",
        "//third_party:guava",
        "//third_party:jsinterop",
    ],
)
