java_binary(
    name = "RegenParseTrees",
    testonly = 1,
    srcs = ["RegenParseTrees.java"],
    data = [
        "//test_programs",
    ],
    deps = [
        ":testcases_java_proto",
        ":testing",
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/compiler/parser",
        "@com_google_protobuf//:protobuf_java",
    ],
)

java_binary(
    name = "RegenTokenizations",
    testonly = 1,
    srcs = ["RegenTokenizations.java"],
    data = [
        "//test_programs",
    ],
    deps = [
        ":testcases_java_proto",
        ":testing",
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/compiler/parser",
        "@com_google_protobuf//:protobuf_java",
    ],
)

java_library(
    name = "testing",
    testonly = 1,
    srcs = ["TokenUtils.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":testcases_java_proto",
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/compiler/parser",
        "//java/se/jsannemo/spooky/compiler/parser:ast_java_proto",
    ],
)

proto_library(
    name = "testcases_proto",
    testonly = 1,
    srcs = ["testcases.proto"],
    deps = [
        "//java/se/jsannemo/spooky/compiler/parser:ast_proto",
    ],
)

java_proto_library(
    name = "testcases_java_proto",
    testonly = 1,
    visibility = ["//visibility:public"],
    deps = [":testcases_proto"],
)
