load("@//:rules.bzl", "java_j2cl_library", "java_j2cl_proto_library")
load("@com_google_j2cl_protobuf//java/com/google/protobuf/contrib/j2cl:j2cl_proto.bzl", "new_j2cl_proto_library")

proto_library(
    name = "checked_proto",
    srcs = ["checked.proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "checked_java_proto",
    visibility = ["//visibility:public"],
    deps = [":checked_proto"],
)

new_j2cl_proto_library(
    name = "checked_java_proto-j2cl",
    visibility = ["//visibility:public"],
    deps = [":checked_proto"],
)

java_j2cl_library(
    name = "typecheck",
    srcs = [
        "Structs.java",
        "TypeChecker.java",
        "Types.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":checked_java_proto",
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/compiler/parser:ast_java_proto",
        "//third_party/errorprone",
        "//third_party/guava",
    ],
)
