java_test(
    name = "IrTest",
    srcs = [
        "IrTest.java",
    ],
    deps = [
        "//java/se/jsannemo/spooky/compiler:common",
        "//java/se/jsannemo/spooky/compiler/ast",
        "//java/se/jsannemo/spooky/compiler/ir",
        "//java/se/jsannemo/spooky/compiler/parser",
        "//third_party:junit",
        "//third_party:truth",
    ],
)
